[package]
name = "bevy_northstar"
version = "0.3.2"
edition = "2021"

authors = ["John Mullins"]
description = "A Bevy plugin for Hierarchical Pathfinding"
homepage = "https://github.com/jtothethree/bevy_northstar"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jtothethree/bevy_northstar"

categories = ["game-development"]
keywords = ["bevy", "pathfinding", "astar", "hpa", "game"]
exclude = ["assets/*", "res/*"]

[features]
default = ["parallel"]
stats = []
parallel = ["rayon", "ndarray/rayon"]
serde = ["dep:serde", "bevy/serialize"]
debug = ["bevy/bevy_gizmos", "bevy/bevy_render"]

[dependencies]
thiserror = "2.0.12"
indexmap = "2.10.0"
ndarray = { version = "0.16.1" }
rayon = { version = "1.10.0", optional = true }
rustc-hash = "2.1.1"
strum = "0.27.1"
slab = "0.4.10"
smallvec = "1.15.1"
serde = { version = "1", features = ["derive"], optional = true }

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = ["bevy_log"]

[dev-dependencies]
bevy = { version = "0.16.1", features = ["bevy_dev_tools"] }
bevy_ecs_tilemap = { version = "0.16" }
bevy_ecs_tiled = { version = "0.7.3", features = ["user_properties"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }

rand = "0.9.1"

[target.'cfg(not(target_os = "windows"))']
[[bench]]
name = "benches"
harness = false

[[example]]
name = "demo"
required-features = ["stats", "debug"]

[[example]]
name = "isometric"
required-features = ["debug"]

[[example]]
name = "collision_testing"
required-features = ["stats", "debug"]

[[example]]
name = "basic"
required-features = ["debug"]
